<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar1</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="title_activity_repeat">RepeatActivity</string>
    <string name="title_activity_alert_time">AlertTimeActivity</string>
    <string name="title_activity_remind_type">RemindTypeActivity</string>

    <string name="app_title">Ringing-Calendar</string>

    <string name="add">Add New Event</string>
    <string name="title">Title</string>
    <string name="Location">Location</string>
    <string name="Time">Time</string>
    <string name="selectTime">Please select a time</string>
    <string name="remind">Remind</string>
    <string name="remindSelect">Please select a remind type</string>
    <string name="alert">Alert</string>
    <string name="alertSelect">Please select an alert time</string>
    <string name="repeat">Repeat</string>
    <string name="repeatSelect">Please select a repeat method</string>
    <string name="notes">Notes</string>




</resources>
