<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.lym.Calendar1.AddEventActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton3"
        android:src="@drawable/add_1"
        android:layout_gravity="right|top" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:weightSum="1"
        android:id="@+id/addEvent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="69dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:id="@+id/Title"
                android:textSize="25sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/titleEditText" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="69dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Location"
                android:id="@+id/location"
                android:textSize="25sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/locationInput" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="69dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Time"
                android:id="@+id/textView2"
                android:gravity="center_vertical"
                android:textSize="25sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/selectTime"
                android:id="@+id/timeSelect"
                android:textSize="20sp"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="69dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remind"
                android:id="@+id/remindType"
                android:textSize="25sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/remindSelect"
                android:id="@+id/remindTypeSelect"
                android:textSize="20sp"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="69dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert"
                android:id="@+id/alertTime"
                android:textSize="25sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/alertSelect"
                android:id="@+id/alertTimeSelect"
                android:textSize="20sp"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="69dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat"
                android:id="@+id/repeatTime"
                android:textSize="25sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/repeatSelect"
                android:id="@+id/repeatTypeSelect"
                android:textSize="20sp"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:id="@+id/textView5"
                android:textSize="15sp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/noteEditText" />
        </LinearLayout>

    </LinearLayout>



</FrameLayout>
